--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,3 +4,4 @@
   when: ansible_os_family == "RedHat" 
         and ansible_distribution_major_version|int >= 7 
         and ansible_virtualization_type == "VMware"
+        and ansible_virtualization_role == "guest"
