--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -1,6 +1,10 @@
 ---
 - name: Install open-vm-tools
-  yum: name=open-vm-tools
+  yum:
+    name: open-vm-tools
 
 - name: Enable open-vm-tools service
-  service: name=vmtoolsd.service enabled=yes state=started
+  service:
+    name: vmtoolsd.service
+    enabled: yes
+    state: started
